# ebac

./: .gitignore  README.md
.github/workflows/: build.yml
EBAC-BackendPython/Parte-3/bookstore/: Dockerfile  build.yml  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml
EBAC-BackendPython/Parte-3/bookstore/bookstore/: settings.py  urls.py
EBAC-BackendPython/Parte-3/bookstore/order/: admin.py  factories.py  urls.py
EBAC-BackendPython/Parte-3/bookstore/order/migrations/: 0001_initial.py
EBAC-BackendPython/Parte-3/bookstore/order/models/: order.py
EBAC-BackendPython/Parte-3/bookstore/order/serializers/: order_serializer.py
EBAC-BackendPython/Parte-3/bookstore/order/tests/models/: test_order.py
EBAC-BackendPython/Parte-3/bookstore/order/tests/test_viewsets/: test_order_viewset.py
EBAC-BackendPython/Parte-3/bookstore/order/viewsets/: order_viewset.py
EBAC-BackendPython/Parte-3/bookstore/product/: admin.py  factories.py  urls.py
EBAC-BackendPython/Parte-3/bookstore/product/migrations/: 0001_initial.py
EBAC-BackendPython/Parte-3/bookstore/product/models/: category.py  product.py
EBAC-BackendPython/Parte-3/bookstore/product/serializers/: category_serializer.py  product_serializer.py
EBAC-BackendPython/Parte-3/bookstore/product/tests/models/: test_category.py  test_product.py
EBAC-BackendPython/Parte-3/bookstore/product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
EBAC-BackendPython/Parte-3/bookstore/product/viewsets/: category_viewset.py  product_viewset.py
EBAC-backendJava/: ExercicioModulo6.txt
(+82 files in other folders)
